# Plugins
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Plugins)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Plugins)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Export)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Import)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Connect)
